fix: Add row gap in item order form

--- a/assets/app.css
+++ b/assets/app.css
@@ -43,7 +43,7 @@ body {
 #item-order-form > div {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-column-gap: var(--2);
+  grid-gap: var(--2);
 }
 
 .item-details__heading {
